min page didn't work. Changed initial scale to .9

--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -60,7 +60,7 @@ body {
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	font-family: "Abril Fatface";
-	/* min-width: 458px; */
+	min-width: 458px;
 }
 
 html {
