--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -60,7 +60,7 @@ body {
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	font-family: "Abril Fatface";
-	min-width: 425px;
+	/* min-width: 458px; */
 }
 
 html {
@@ -1106,12 +1106,12 @@ padding: 200px 0;
 	font-size: 22px;
 }
 
-.container-fluid {
+/* .container-fluid {
   padding-right: 15px;
   padding-left: 15px;
   margin-right: auto;
   margin-left: auto;
-}
+} */
 .row {
   margin-right: -15px;
   margin-left: -15px;
